--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index",
     "build": ""
   },
@@ -29,6 +29,10 @@
     "hapi-auth-jwt2": "^8.6.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.4",
+    "mongoose-sequence": "^5.1.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
