--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
+    "ms": "^2.1.2",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
@@ -39,6 +40,7 @@
     "react-meta-tags": "^0.7.4",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-split-pane": "^0.1.87",
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
