--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "socket.io-client": "^2.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/polyfill": "^7.4.4",
@@ -28,6 +26,7 @@
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "konva": "^3.4.1",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
@@ -43,6 +42,7 @@
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.3",
