--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
     "react-meta-tags": "^0.7.4",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-scrollbar": "^0.5.6",
+    "react-scrollbars-custom": "^4.0.16",
     "react-split-pane": "^0.1.87",
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
