--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "start": "node index",
     "build": ""
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Dymnarisk/orcishRevenge#readme",
   "dependencies": {
+    "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.1",
     "auto-bind": "^2.1.0",
     "bcryptjs": "^2.4.3",
@@ -34,6 +35,10 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
+    "jest": "^24.8.0",
+    "mocha": "^6.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
