--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-konva": "^16.8.7-3",
     "react-meta-tags": "^0.7.4",
