--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/Dymnarisk/orcishRevenge#readme",
   "dependencies": {
-    "@hapi/hapi": "^18.3.1",
+    "@hapi/hapi": "^18.4.0",
     "@hapi/inert": "^5.2.1",
     "auto-bind": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
     "console-ten": "0.0.5",
+    "deep-object-diff": "^1.1.0",
+    "draft-js": "^0.11.1",
     "glob": "^7.1.4",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.6.1",
