--- a/package.json
+++ b/package.json
@@ -38,8 +38,24 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "husky": "^3.1.0",
     "jest": "^24.8.0",
+    "lint-staged": "^9.5.0",
     "mocha": "^6.2.0",
     "socket.io-client": "^2.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
